--- a/Bocoran-Pemenang-Beruntung-Auto-Panen-Cuan-dengan-Fitur-Gacor-Tergacor-yang-Bikin-Gempar.html
+++ b/Bocoran-Pemenang-Beruntung-Auto-Panen-Cuan-dengan-Fitur-Gacor-Tergacor-yang-Bikin-Gempar.html
@@ -291,7 +291,7 @@
         </div>
         <div class='button-wrapper'>
             <a href='https://medanlink.com/mpoturbo' rel = "nofollow" class='btn-secondary'>MPOTURBO</a>
-            <a href='https://medanlink.com/0TzWzBzRISVm' rel = "nofollow" class='btn-primary'>MPOTURBO</a>
+            <a href='https://medanlink.com/0TzWzBzRISVm' rel = "nofollow" class='btn-primary'>HEROSLOT77</a>
         </div>
     </div>
 
@@ -321,7 +321,7 @@
               <a href="https://medanlink.com/0TzWzBzRISVm" 
                  rel="nofollow noopener noreferrer" 
                  target="_blank">
-                 MPOTURBO
+                 HEROSLOT77
               </a>
             </div>
           </div>
@@ -336,7 +336,7 @@
         <tbody>
           <tr>
             <td>Nama Situs</td>
-            <td class="rainbow-text"><a href="https://medanlink.com/0TzWzBzRISVm">MPOTURBO</a> X <a href="https://medanlink.com/mpoturbo">MPOTURBO</a></a></td>
+            <td class="rainbow-text"><a href="https://medanlink.com/0TzWzBzRISVm">HEROSLOT77</a> X <a href="https://medanlink.com/mpoturbo">MPOTURBO</a></a></td>
           </tr>
           <tr>
             <td>Min. Deposit</td>
